cluster/apps/networking/authelia/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: networking
  labels:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/name: authelia
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: authelia
      app.kubernetes.io/name: authelia
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: authelia
        app.kubernetes.io/name: authelia
    spec:
      containers:
        - name: redis
          image: k8s.gcr.io/redis:e2e
          resources:
            requests:
              cpu: 50m
              memory: 125Mi
          ports:
            - containerPort: 6379
        - name: authelia
          image: authelia/authelia:4.29.4
          ports:
            - containerPort: 9091
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: 500m
              memory: 1500Mi
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      volumes:
        - name: config
          emptyDir: {}
        - name: configyaml
          configMap:
            name: authelia-config
            items:
              - key: configuration.yml
                path: configuration.yml
              - key: users.yaml
                path: users.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: networking
  annotations:
    prometheus.io/probe: "true"
    prometheus.io/protocol: http
  labels:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/name: authelia
spec:
  selector:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/name: authelia
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9091
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/name: authelia
  name: authelia
  namespace: networking
spec:
  tls:
    - hosts:
        - login.${SECRET_DOMAIN}
  rules:
    - host: login.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authelia
                port:
                  number: 80
